--- a/app/public/wp-content/themes/manonemusic/templates/single-commercial.html
+++ b/app/public/wp-content/themes/manonemusic/templates/single-commercial.html
@@ -1,3 +1,3 @@
 <!-- wp:template-part {"slug":"header","theme":"manonemusic","area":"header"} /-->
 
-<!-- wp:post-content /-->   
+<!-- wp:pattern {"slug":"manonemusic/commercial-pattern"} /-->
