project-page: fix admin styles on live site

--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -212,9 +212,9 @@
    <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
    <!-- /wp:spacer -->
    
-   <!-- wp:columns {"verticalAlignment":null,"style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}},"className":"is-style-default"} -->
-   <div class="wp-block-columns is-style-default" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"block mb-8"} -->
+   <!-- wp:columns {"style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}},"className":"is-style-default"} -->
+   <div class="wp-block-columns is-style-default" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","width":"33.3%"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom" style="flex-basis:33.3%"><!-- wp:paragraph {"className":"block mb-8"} -->
    <p class="block mb-8">Barely active socials:</p>
    <!-- /wp:paragraph -->
    
@@ -225,19 +225,27 @@
    <!-- wp:read-more {"content":"instagram"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-style-column-padding-align-bottom"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge text-center"} /-->
+   <!-- wp:column {"width":"33.3%"} -->
+   <div class="wp-block-column" style="flex-basis:33.3%"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge"} /-->
    
-   <!-- wp:spacer {"height":"25vh"} -->
-   <div style="height:25vh" aria-hidden="true" class="wp-block-spacer"></div>
-   <!-- /wp:spacer --></div>
+   <!-- wp:spacer {"height":"15vh"} -->
+   <div style="height:15vh" aria-hidden="true" class="wp-block-spacer"></div>
+   <!-- /wp:spacer -->
+   
+   <!-- wp:paragraph {"className":"block mb-8"} -->
+   <p class="block mb-8">Buy stuff:</p>
+   <!-- /wp:paragraph -->
+   
+   <!-- wp:read-more {"content":"Bandcamp","linkTarget":"_blank"} /-->
+   
+   <!-- wp:read-more {"content":"Merch"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"textAlign":"right","format":"© Y \\M\\A\\N/\\O\\N\\E \\M\\U\\S\\I\\C"} /-->
+   <!-- wp:column {"verticalAlignment":"bottom","width":"33.4%"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom" style="flex-basis:33.4%"><!-- wp:post-date {"textAlign":"left","format":"© Y \\M\\A\\N/\\O\\N\\E \\M\\U\\S\\I\\C"} /-->
    
-   <!-- wp:paragraph {"align":"right"} -->
-   <p class="has-text-align-right">Website by JuliScapucin</p>
+   <!-- wp:paragraph {"align":"left"} -->
+   <p class="has-text-align-left">Website by JuliScapucin</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns --></div>
