--- a/app/public/wp-content/plugins/manonemusic/src/style.css
+++ b/app/public/wp-content/plugins/manonemusic/src/style.css
@@ -47,3 +47,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	transition: background-color 0.2s linear;
 }
+
+input {
+	background-color: var(--color-primary);
+}
