--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -233,7 +233,7 @@ body::-webkit-scrollbar-thumb,
 
 /* PAGE CONTAINER */
 .is-style-group-page-container {
-	@apply w-screen min-h-[--container-height-desktop] max-w-wide pt-16 px-8 my-0 mx-auto;
+	@apply w-screen min-h-[--container-height-desktop] max-w-wide py-16 px-8 my-0 mx-auto;
 }
 
 /* SECTION */
@@ -285,7 +285,3 @@ body::-webkit-scrollbar-thumb,
 .is-style-indent-right {
 	@apply mr-32 mt-4;
 }
-
-/* .transparent {
-	@apply opacity-50 transition-opacity duration-500;
-} */
