--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -133,38 +133,37 @@
    <!-- /wp:column --></div>
    <!-- /wp:columns --></section>
    <!-- /wp:group -->
-   
+
    <!-- wp:group {"tagName":"section","metadata":{"name":"Releases"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:columns {"className":"is-style-max-width"} -->
-   <div class="wp-block-columns is-style-max-width"><!-- wp:column {"width":"85%"} -->
-   <div class="wp-block-column" style="flex-basis:85%"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
-   <h2 class="wp-block-heading is-style-heading-display home-heading">releases</h2>
-   <!-- /wp:heading -->
-   
-   <!-- wp:columns {"className":"is-style-default"} -->
-   <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
-   <!-- /wp:paragraph -->
-   
-   <!-- wp:paragraph {"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
-   <!-- /wp:paragraph --></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column {"className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-style-column-padding-align-bottom"></div>
-   <!-- /wp:column --></div>
-   <!-- /wp:columns --></div>
-   <!-- /wp:column -->
-   
-   <!-- wp:column {"width":"15%"} -->
-   <div class="wp-block-column" style="flex-basis:15%"><!-- wp:manonemusic/cards-stack {"section":"release","variant":"detail-page","classes":"w-full h-full overflow-y-scroll pt-16 pr-8 pb-8 space-y-40"} -->
-   <div class="wp-block-manonemusic-cards-stack"></div>
-   <!-- /wp:manonemusic/cards-stack --></div>
-   <!-- /wp:column --></div>
-   <!-- /wp:columns --></section>
+   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+      <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+      <h2 class="wp-block-heading is-style-heading-display home-heading">Releases</h2>
+      <!-- /wp:heading -->
+      
+      <!-- wp:columns {"className":"is-style-default"} -->
+      <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
+      <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding">
+      <!-- wp:paragraph {"className":"is-style-indent-left"} -->
+      <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
+      <!-- /wp:paragraph -->
+      
+      <!-- wp:paragraph {"className":"is-style-indent-right"} -->
+      <p class="is-style-indent-right">New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
+      <!-- /wp:paragraph --></div>
+      <!-- /wp:column -->
+      
+      <!-- wp:column {"className":"is-style-column-full"} -->
+      <div class="wp-block-column is-style-column-full"></div>
+      <!-- /wp:column --></div>
+      <!-- /wp:columns -->
+      
+      <!-- wp:manonemusic/release-cards -->
+      <div class="wp-block-manonemusic-release-cards"></div>
+      <!-- /wp:manonemusic/release-cards --></div>
+      <!-- /wp:group -->
+   </section>
    <!-- /wp:group -->
+   
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"About"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="about" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
