project-page: fix scroll in admin

--- a/app/public/wp-content/themes/manonemusic/style.css
+++ b/app/public/wp-content/themes/manonemusic/style.css
@@ -147,7 +147,7 @@ Text Domain: manonemusic
 /* ------------------------------------- */
 /* Remove WP styles that break the layout */
 
-.wp-site-blocks {
+.home .wp-site-blocks {
 	@apply overflow-x-clip;
 }
 
