--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -32,9 +32,9 @@
    <div style="height:100px" aria-hidden="true" class="wp-block-spacer"></div>
    <!-- /wp:spacer -->
    
-   <!-- wp:columns {"verticalAlignment":"bottom","style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}}} -->
-   <div class="wp-block-columns are-vertically-aligned-bottom" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-bodyMedium"} -->
+   <!-- wp:columns {"style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}}} -->
+   <div class="wp-block-columns" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"top"} -->
+   <div class="wp-block-column is-vertically-aligned-top"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-bodyMedium"} -->
    <p class="text-bodyMedium">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
@@ -43,8 +43,8 @@
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding-align-bottom"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding-align-bottom"><!-- wp:post-date {"format":"m / Y","className":"text-bodyMedium font-primary text-secondary"} /-->
+   <!-- wp:column {"verticalAlignment":"top"} -->
+   <div class="wp-block-column is-vertically-aligned-top"><!-- wp:post-date {"format":"m / Y","className":"text-bodyMedium font-primary text-secondary mt-32"} /-->
    
    <!-- wp:paragraph {"className":"text-bodyMedium"} -->
    <p class="text-bodyMedium">Location: Amsterdam</p>
@@ -164,9 +164,7 @@
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"About"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
    <section id="about" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
-   <div class="wp-block-group is-style-max-width">
-   
-   <!-- wp:manonemusic/about-image /-->
+   <div class="wp-block-group is-style-max-width"><!-- wp:manonemusic/about-image {"className":"wp-block-manonemusic-about-image"} /-->
    
    <!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">about</h2>
@@ -219,8 +217,8 @@
    <!-- wp:read-more {"content":"instagram"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"width":"33.3%"} -->
-   <div class="wp-block-column" style="flex-basis:33.3%"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge"} /-->
+   <!-- wp:column {"width":"33.3%","className":"mt-32 md:mt-0"} -->
+   <div class="wp-block-column mt-32 md:mt-0" style="flex-basis:33.3%"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge"} /-->
    
    <!-- wp:spacer {"height":"15vh"} -->
    <div style="height:15vh" aria-hidden="true" class="wp-block-spacer"></div>
