--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -34,8 +34,8 @@
    
    <!-- wp:columns {"style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}}} -->
    <div class="wp-block-columns" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"top"} -->
-   <div class="wp-block-column is-vertically-aligned-top"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}},"className":"text-bodyMedium"} -->
-   <p class="text-bodyMedium">Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
+   <div class="wp-block-column is-vertically-aligned-top"><!-- wp:paragraph {"style":{"layout":{"selfStretch":"fit","flexSize":null}}} -->
+   <p>Tailored sound design and audio identities that capture the spirit of your brand and resonate with your audience.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
@@ -206,8 +206,8 @@
    
    <!-- wp:columns {"style":{"spacing":{"margin":{"top":"0vh","bottom":"0px"}}},"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default" style="margin-top:0vh;margin-bottom:0px"><!-- wp:column {"verticalAlignment":"bottom","width":"33.3%"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom" style="flex-basis:33.3%"><!-- wp:paragraph {"className":"block mb-8"} -->
-   <p class="block mb-8">Barely active socials:</p>
+   <div class="wp-block-column is-vertically-aligned-bottom" style="flex-basis:33.3%"><!-- wp:paragraph {"className":"block mb-4"} -->
+   <p class="block mb-4">Barely active socials:</p>
    <!-- /wp:paragraph -->
    
    <!-- wp:read-more {"content":"linkedin"} /-->
@@ -218,14 +218,14 @@
    <!-- /wp:column -->
    
    <!-- wp:column {"width":"33.3%","className":"mt-32 md:mt-0"} -->
-   <div class="wp-block-column mt-32 md:mt-0" style="flex-basis:33.3%"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email","className":"text-titleLarge"} /-->
+   <div class="wp-block-column mt-32 md:mt-0" style="flex-basis:33.3%"><!-- wp:read-more {"content":"For bookings and inquiries \u003cbr\u003edrop me an email"} /-->
    
    <!-- wp:spacer {"height":"15vh"} -->
    <div style="height:15vh" aria-hidden="true" class="wp-block-spacer"></div>
    <!-- /wp:spacer -->
    
-   <!-- wp:paragraph {"className":"block mb-8"} -->
-   <p class="block mb-8">Buy stuff:</p>
+   <!-- wp:paragraph {"className":"block mb-4"} -->
+   <p class="block mb-4">Buy stuff:</p>
    <!-- /wp:paragraph -->
    
    <!-- wp:read-more {"content":"Bandcamp","linkTarget":"_blank"} /-->
@@ -233,8 +233,8 @@
    <!-- wp:read-more {"content":"Merch"} /--></div>
    <!-- /wp:column -->
    
-   <!-- wp:column {"verticalAlignment":"bottom","width":"33.4%"} -->
-   <div class="wp-block-column is-vertically-aligned-bottom" style="flex-basis:33.4%"><!-- wp:post-date {"textAlign":"left","format":"© Y \\M\\A\\N/\\O\\N\\E \\M\\U\\S\\I\\C"} /-->
+   <!-- wp:column {"verticalAlignment":"bottom","width":"33.4%","className":"mt-8"} -->
+   <div class="wp-block-column is-vertically-aligned-bottom mt-8" style="flex-basis:33.4%"><!-- wp:post-date {"textAlign":"left","format":"© Y \\M\\A\\N/\\O\\N\\E \\M\\U\\S\\I\\C"} /-->
    
    <!-- wp:paragraph {"align":"left"} -->
    <p class="has-text-align-left">Website by JuliScapucin</p>
