--- a/app/public/wp-content/themes/manonemusic/templates/index.html
+++ b/app/public/wp-content/themes/manonemusic/templates/index.html
@@ -55,8 +55,8 @@
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Films"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="films" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <section id="films" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">Films</h2>
    <!-- /wp:heading -->
    
@@ -70,15 +70,15 @@
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns -->
+   <!-- /wp:columns --></div>
+   <!-- /wp:group -->
    
-   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-[6/8.5]","section":"film"} /--></div>
-   <!-- /wp:group --></section>
+   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-[6/8.5]","section":"film"} /--></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Commercials"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="commercials" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <section id="commercials" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">Commercials</h2>
    <!-- /wp:heading -->
    
@@ -92,67 +92,59 @@
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns -->
+   <!-- /wp:columns --></div>
+   <!-- /wp:group -->
    
-   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-video","section":"commercial"} /--></div>
-   <!-- /wp:group --></section>
+   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-video","section":"commercial"} /--></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Projects"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <section id="projects" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">Projects</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
-   <!-- /wp:paragraph -->
-   
-   <!-- wp:paragraph {"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
+   <p class="is-style-indent-left">His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns -->
+   <!-- /wp:columns --></div>
+   <!-- /wp:group -->
    
-   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-[16/9]","section":"project"} /--></div>
-   <!-- /wp:group --></section>
+   <!-- wp:manonemusic/cards-home {"aspectRatio":"aspect-[16/9]","section":"project"} /--></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Releases"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <section id="releases" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">Releases</h2>
    <!-- /wp:heading -->
    
    <!-- wp:columns {"className":"is-style-default"} -->
    <div class="wp-block-columns is-style-default"><!-- wp:column {"verticalAlignment":"bottom","className":"is-style-column-padding"} -->
    <div class="wp-block-column is-vertically-aligned-bottom is-style-column-padding"><!-- wp:paragraph {"className":"is-style-indent-left"} -->
-   <p class="is-style-indent-left">IXA is Matt’s latest electronic music production project, pushing his unique electronic music around the world. His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
-   <!-- /wp:paragraph -->
-   
-   <!-- wp:paragraph {"className":"is-style-indent-right"} -->
-   <p class="is-style-indent-right">New music out now on Purple Sun Records check out IXA music on Beatport and streaming everywhere.</p>
+   <p class="is-style-indent-left">His sound delves deep into a musical past rich in soulful, electronic influences with haunting vocal samples, deep, emotional synths and unrelenting beats featuring heavily in both IXA productions and DJ sets.</p>
    <!-- /wp:paragraph --></div>
    <!-- /wp:column -->
    
    <!-- wp:column {"className":"is-style-column-full"} -->
    <div class="wp-block-column is-style-column-full"></div>
    <!-- /wp:column --></div>
-   <!-- /wp:columns -->
+   <!-- /wp:columns --></div>
+   <!-- /wp:group -->
    
-   <!-- wp:manonemusic/cards-home /--></div>
-   <!-- /wp:group --></section>
+   <!-- wp:manonemusic/cards-home /--></section>
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"About"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="about" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:manonemusic/about-image {"className":"wp-block-manonemusic-about-image"} /-->
+   <section id="about" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:manonemusic/about-image {"className":"wp-block-manonemusic-about-image"} /-->
    
    <!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">about</h2>
@@ -183,8 +175,8 @@
    <!-- /wp:group -->
    
    <!-- wp:group {"tagName":"section","metadata":{"name":"Contact"},"className":"is-style-group-section panel","layout":{"type":"constrained"}} -->
-   <section id="contact" class="wp-block-group is-style-group-section panel"><!-- wp:group {"layout":{"type":"constrained"}} -->
-   <div class="wp-block-group"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
+   <section id="contact" class="wp-block-group is-style-group-section panel"><!-- wp:group {"className":"is-style-max-width","layout":{"type":"constrained"}} -->
+   <div class="wp-block-group is-style-max-width"><!-- wp:heading {"className":"is-style-heading-display home-heading"} -->
    <h2 class="wp-block-heading is-style-heading-display home-heading">contact</h2>
    <!-- /wp:heading -->
    
